# dummy_test_task

./: .flake8  .gitignore  README.md  pre-commit  pyproject.toml
alembic/: env.py
alembic/versions/: 1108eeaf4867_initial.py
app/: client.py  server.py
deploy/: Dockerfile  compose.yml
