[tool.poetry]
name = "dummy-test-task"
version = "0.1.0"
description = ""
authors = ["Daniil <70702619+danial29rus@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.7"
pydantic-settings = "^2.7.1"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.37"
asyncpg = "^0.30.0"
alembic = "^1.14.1"
aiohttp = "^3.11.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
